templating to update a match

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,3 +1,5 @@
 add_test_data: Test HTML service
 formed_club_json: JSON for club
+formed_match_json: Json to update match
+update_match: Update match info
 send_data: Send data
